...
        var model: String?
        var osVersion: String?
        var locale: String?
        enum CodingKeys: String, CodingKey { case model, osVersion = "os_version", locale }
    }

    var kind: String
    var comment: String?
    var screen: String?
    var element: String?
    var elementMatch: String?
    var elementFrame: Frame?
    var tap: Point?
    var viewport: Viewport?
    var platform: String
    var sdk: SDK
    var appVersion: String?
    var build: String?
    var device: Device
    var clientTS: String?

    enum CodingKeys: String, CodingKey {
        case kind, comment, screen, element
        case elementMatch = "element_match"
        case elementFrame = "element_frame"
        case tap, viewport, platform, sdk
        case appVersion = "app_version"
        case build, device
        case clientTS = "client_ts"
    }
...
